// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render properly on first page 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  color: #4d4948;
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background-color: #808080;
  border: 1px solid transparent;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-2:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  color: #191919;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-3 {
  padding: 8px 16px;
  border: 1px solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #000000;
  color: #b3b3b3;
}

.emotion-4 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d4948;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background-color: #808080;
  border: 1px solid transparent;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-6:hover {
  opacity: 0.5;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  color: #b3b3b3;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    Jobs: 1–17 of 415
  </div>
  <div
    className="emotion-7"
  >
    <button
      className="emotion-2"
      disabled={true}
      type="button"
    >
      <svg
        className="emotion-1"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
    <div
      className="emotion-3"
    >
      1
    </div>
    <div
      className="emotion-4"
    >
      of 
      2
    </div>
    <a
      className="emotion-6"
      href="/?page=2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      rel="next"
    >
      <svg
        className="emotion-5"
        data-file-name="chevron.svg"
        width={16}
      />
    </a>
  </div>
</div>
`;

exports[`<Pagination /> should render properly on last page 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  color: #4d4948;
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  padding: 8px 16px;
  border: 1px solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #000000;
  color: #b3b3b3;
}

.emotion-4 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4d4948;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background-color: #808080;
  border: 1px solid transparent;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-2:hover {
  opacity: 0.5;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  color: #b3b3b3;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background-color: #808080;
  border: 1px solid transparent;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-6:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  color: #191919;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  className="emotion-8"
>
  <div
    className="emotion-0"
  >
    Jobs: 1–17 of 415
  </div>
  <div
    className="emotion-7"
  >
    <a
      className="emotion-2"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      rel="prev"
    >
      <svg
        className="emotion-1"
        data-file-name="chevron.svg"
        width={16}
      />
    </a>
    <div
      className="emotion-3"
    >
      2
    </div>
    <div
      className="emotion-4"
    >
      of 
      2
    </div>
    <button
      className="emotion-6"
      disabled={true}
      type="button"
    >
      <svg
        className="emotion-5"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
  </div>
</div>
`;
